# snap-epa-orchestrator

./: README.md  pyproject.toml  tox.ini
.github/workflows/: tics.yml
epa_orchestrator/: allocations_db.py  cpu_pinning.py  daemon_handler.py  hugepages_db.py  log.py  memory_manager.py  schemas.py  state_store.py  utils.py
snap/: snapcraft.yaml
snap/local/: logrotate.conf
tests/: conftest.py
tests/functional/: test_socket_api.py
tests/integration/: test_memory_integration.py  test_socket_communication.py
tests/unit/: test_allocations_db.py  test_cpu_pinning.py  test_daemon_integration.py  test_hugepages_db.py  test_memory_manager.py  test_memory_manager_numa.py  test_schemas.py  test_utils.py
